[package]
name = "apnoxide"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Apple Push Notification Service for Rust built on `reqwest`"
repository = "https://github.com/NanamiNakano/apnoxide"
readme = "README.md"
keywords = ["APN", "APNS"]

[dependencies]
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
snafu = "0.8.5"
